# ASDD

./: .asdd.example.yml  .asdd.yml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  STANDARD.md  asdd-kit.yml  asdd_cli.py  asdd_cli.test.sh  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
adopters/: README.md
agents/: intake.md  interaction.md  review-code.md  review-contributor.md  review-impact.md  review-merge.md  review-quality.md  review-security.md  review-spec.md  runtime.md  triage.md
asdd_kit/: __init__.py
cli/: README.md  _openspec_locate.py  asdd-mcp.py  asdd-mcp.test.sh  audit.py  audit.test.sh  check-models.sh  claim-check.py  claim-check.test.sh  connect-check.py  connect-check.test.sh  conventions-check.py  conventions-check.test.sh  dashboard.css  dashboard.py  dashboard.test.sh  dev-council.py  dev-council.test.sh  doctor.py  doctor.test.sh  gen-recipe-dist.py  init.sh  init.test.sh  kit-check.py  kit-check.test.sh  merge-eligibility.py  merge-eligibility.test.sh  openspec-gate.py  openspec-gate.test.sh  operate-guard.py  operate-guard.test.sh  operate-run.py  operate-run.test.sh  recipe-lint.py  recipe-lint.test.sh  resolve-model.sh  resolve-model.test.sh  run-agent.sh  run-review-resolve.test.sh  setup-dashboard.py  (+7 more)
docs/: README.md  contributing-to-asdd.md  prior-art.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
documentation/: recipe.yaml
examples/: README.md
openspec/: config.yaml
(+168 files in other folders)
