# Makes the `asdd` CLI installable.
#   pipx install asdd       # a self-contained wheel: the operate kit ships with it
#   pip install -e .        # from a checkout - links `asdd` to this tree
#   asdd --help
# The CLI dispatches to the tools in cli/ and validation/. In a checkout those live alongside it and
# stay the single source of truth; a built wheel has no checkout, so setup.py stages them into
# asdd_kit/ as package data and the CLI falls back to that.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asdd"
version = "0.1.0"
description = "The ASDD CLI: the deterministic gates, the installer, and the Goose MCP extension under one command"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["asdd", "goose", "agentic", "spec-driven-development", "mcp"]

[project.urls]
Homepage = "https://github.com/OneHillAI/ASDD"

[project.scripts]
asdd = "asdd_cli:main"

[tool.setuptools]
py-modules = ["asdd_cli"]
packages = ["asdd_kit"]
include-package-data = true

[tool.setuptools.package-data]
# Everything the kit needs, including the dot-directory of workflows and gates.
asdd_kit = ["**/*", ".asdd.example.yml", ".github/**/*"]
